FMWK-154 Tests cleanup (#561)